# Boost_and_thrift_for_Android

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/trift_n_boost/exec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/simple/exec/: MainActivity.java
app/src/main/java/com/trift_n_boost/exec/: MainActivity.kt
app/src/main/jni/: CMakeLists.txt  main.cpp
app/src/main/jni/thrift/: CMakeLists.txt  Makefile  Makefile.in
app/src/main/jni/thrift/src/thrift/: config.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/trift_n_boost/exec/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
